implement-update functionality

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -46,3 +46,23 @@ img{
 
 
 }
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input{
+    width: 250px;
+    padding: 10px;
+    border: 1px solid gray;
+}
+
+.formButton{
+    border: none;
+    padding: 10px;
+    background-color: rgb(177, 106, 225);
+    color:white;
+    font-weight: bold;
+    cursor: pointer;
+}
